--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>ImOnPoint</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="We provide recruitment and Global Staffing Services" name="description">
+  <meta content="recruitment, Staffing, IM ONPOINT CONSULTANCY" name="keywords">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/fav/apple-icon-57x57.png">
@@ -139,13 +139,13 @@
           </div>
 
           <div class="col-lg-6 content">
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-            <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+            <h2>Find the right talent that fits the required role</h2>
+            <h3>Our Placement consultants in Chennai are extremely committed to providing top-quality recruitment services to both clients and candidates.”</h3>
 
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> We do offer domestic jobs, International jobs, and more.</li>
+              <li><i class="bi bi-check-circle"></i> We offers Value based Training across the Top SKill set programmes and offers Placement with 100% assurance anywhere in India and as well as abroad.</li>
+              <li><i class="bi bi-check-circle"></i>We are filtering qualified candidates and fulfill employer expectations. If you want to settle down in Career come and reach IM ONPOINT.</li>
             </ul>
 
           </div>
@@ -159,7 +159,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Services</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+          <p>Our Job Consultancy services in Chennai handle the selection and screening of the candidates, taking a heavy workload off of our clients back.</p>
         </div>
 
         <div class="row gy-4">
@@ -167,15 +167,15 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident etiro rabeta lingo.</p>
+              <h4 class="title"><a href="">Job Consulting</a></h4>
+              <p class="description">We provide recruitment and Global Staffing Services for IT Servives for various platforms, Technical, Construction, Engineering, Marketing, Finance, and other Professions.</p>
             </div>
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <h4 class="title"><a href="">Abroad Jobs</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata nodera clas.</p>
             </div>
           </div>
@@ -183,7 +183,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
               <div class="icon"><i class="bi bi-bar-chart"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <h4 class="title"><a href="">Placement Consultants</a></h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur trinige zareta lobur trade.</p>
             </div>
           </div>
