--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>ImOnPoint</title>
   <meta content="We provide recruitment and Global Staffing Services" name="description">
-  <meta content="recruitment, Staffing, IM ONPOINT CONSULTANCY" name="keywords">
+  <meta content="Recruitment, Staffing, IM ONPOINT CONSULTANCY" name="keywords">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/fav/apple-icon-57x57.png">
@@ -51,7 +51,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:imonpoint2021@gmail.com">imonpoint2021@gmail.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>7401 241 241</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 7402 242 242</span></i>
         <!-- <i class="bi bi-phone d-flex align-items-center ms-4"><span>7402 242 242</span></i> -->
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
@@ -191,7 +191,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="box">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <h4 class="title"><a href="">Manpower services</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum rideta zanox satirente madera</p>
             </div>
           </div>
@@ -524,7 +524,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Contact Us</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+          <p>We are here to answer any questions you may have about our placement services. Reach out to us and we'll respond as soon as we can.</p>
         </div>
 
         <div class="row contact-info">
@@ -541,7 +541,7 @@
             <div class="contact-phone">
               <i class="bi bi-phone"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <p><a href="tel:+91 7402 242 242">+91 7402 242 242</a></p>
             </div>
           </div>
 
@@ -549,7 +549,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <p><a href="mailto:imonpoint2021@gmail.com">imonpoint2021@gmail.com</a></p>
             </div>
           </div>
 
