--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="box">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
               <h4 class="title"><a href="">Abroad Jobs</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata nodera clas.</p>
+              <p class="description">Best Abroad Job consultants in Chennai with professional, talented team is awaiting to assist you for any occasion. Providing high expertise and top-quality services!</p>
             </div>
           </div>
 
@@ -184,7 +184,7 @@
             <div class="box">
               <div class="icon"><i class="bi bi-bar-chart"></i></div>
               <h4 class="title"><a href="">Placement Consultants</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur trinige zareta lobur trade.</p>
+              <p class="description">With our vast network abilities that are in unison with our professional & experienced counsels; Our Placement consultants in Chennai are extremely committed to providing top-quality recruitment services to both clients and candidates.</p>
             </div>
           </div>
 
@@ -192,7 +192,7 @@
             <div class="box">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">Manpower services</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum rideta zanox satirente madera</p>
+              <p class="description">At ImOnPoint, the leading manpower solutions in Chennai, we believe in technologolically sound, contemporary, and smart hiring methodologies. We believe in simplifying recruitment complexities and easing your hiring troubles.</p>
             </div>
           </div>
 
@@ -202,7 +202,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients">
+    <!-- <section id="clients">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Clients</h2>
@@ -224,21 +224,26 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section> -->
+    <!-- End Clients Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Our Portfolio</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+          <!-- <p>We (I'M ONPOINT) at the Center for Learning Innovations and Customized Knowledge Solutions (CLICKS) are passionate about the quality of Higher Skillset, 
+            and have a keen interest in supporting our Students throughout their journey of development, growth and excellence by providing innovative, customized and responsive ‘hands-on’ solutions in case of high proficiency skillset. 
+            I'M ONPOINT work is based on obtaining a deep understanding of Market needs to ensure both fitness for purpose and alignment with professional best practices. </p> -->
+            <p>We offer Courses that address emerging market requirement regionally and internationally and work with institution on building internal capabilities in an effective and sustainable manner.
+              CLICKS provides a large range of consultancy activities through its high caliber team, network of associate experts and partners. The following represents a list of some of the services that the center typically engages with in each of its areas of expertise.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
+              <li data-filter=".filter-app">Automation</li>
               <li data-filter=".filter-card">Card</li>
               <li data-filter=".filter-web">Web</li>
             </ul>
@@ -248,12 +253,12 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/selenium-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Automation</h4>
+              <p>Selenium</p>
+              <a href="assets/img/portfolio/selenium-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Automation 1"><i class="bx bx-plus"></i></a>
+              <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
             </div>
           </div>
 
@@ -268,12 +273,12 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/jira.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Automation</h4>
+              <p>Jira</p>
+              <a href="assets/img/portfolio/jira.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Automation 2"><i class="bx bx-plus"></i></a>
+              <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
             </div>
           </div>
 
@@ -298,12 +303,12 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/cucumber.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Automation</h4>
+              <p>Cucumber</p>
+              <a href="assets/img/portfolio/cucumber.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Automation 3"><i class="bx bx-plus"></i></a>
+              <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
             </div>
           </div>
 
