--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             and have a keen interest in supporting our Students throughout their journey of development, growth and excellence by providing innovative, customized and responsive ‘hands-on’ solutions in case of high proficiency skillset. 
             I'M ONPOINT work is based on obtaining a deep understanding of Market needs to ensure both fitness for purpose and alignment with professional best practices. </p> -->
             <p>We offer Courses that address emerging market requirement regionally and internationally and work with institution on building internal capabilities in an effective and sustainable manner.
-              CLICKS provides a large range of consultancy activities through its high caliber team, network of associate experts and partners. The following represents a list of some of the services that the center typically engages with in each of its areas of expertise.</p>
+              The following represents a list of some of the services that the center typically engages with in each of its areas of expertise.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -352,7 +352,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Testimonials</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+          <p>Customers are usually more than happy to share their opinions. In fact, the most successful businesses today take the thoughts and feelings of their customers seriously. Here, What our Members and beneficiaries say about us…</p>
         </div>
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
@@ -362,12 +362,13 @@
               <div class="testimonial-item">
                 <p>
                   <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Before I am getting into I'M ONPOINT, I was in great trouble in case of my employment and for finding right skillset.  
+                  There were many days spent waiting by the mailbox praying for a employer to send me recruitment offer. Finally I'M ONPOINT Made my LIFE.
                   <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
                 </p>
-                <img src="assets/img/testimonial-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <img src="assets/img/person-male.jpg" class="testimonial-img" alt="">
+                <h3>Fresher</h3>
+                <h4>Software Trainee</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -375,12 +376,12 @@
               <div class="testimonial-item">
                 <p>
                   <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Here Course fees were very fair and affordable. The days with I'M ONPOINT was very accommodating.
                   <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
                 </p>
-                <img src="assets/img/testimonial-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <img src="assets/img/person-female.jpg" class="testimonial-img" alt="">
+                <h3>Fresher</h3>
+                <h4>Software Developer</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -388,12 +389,12 @@
               <div class="testimonial-item">
                 <p>
                   <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  I am writing to express my gratitude to the I'M ONPOINT consultant who helped me successfully secure the role of Technical Consultant in an established corporation.
                   <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
                 </p>
-                <img src="assets/img/testimonial-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <img src="assets/img/person-male.jpg" class="testimonial-img" alt="">
+                <h3>Fresher</h3>
+                <h4>Software Test Engineer Trainee</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -401,16 +402,17 @@
               <div class="testimonial-item">
                 <p>
                   <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  I am pleased to write this testimonial for I'M ONPOINT who helped me find a position in JAVA Automation industry.
+                  I'M ONPOINT was extremely professional and understood the specifics of the job I required. 
                   <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
                 </p>
-                <img src="assets/img/testimonial-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <img src="assets/img/person-female.jpg" class="testimonial-img" alt="">
+                <h3>Fresher</h3>
+                <h4>Software Test Engineer Trainee</h4>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
@@ -421,7 +423,8 @@
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div> -->
+            <!-- End testimonial item -->
 
           </div>
           <div class="swiper-pagination"></div>
@@ -446,16 +449,16 @@
     </section><!-- End Call To Action Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team">
+    <!-- <section id="team">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Our Team</h2>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6">
-            <div class="member">
+            <div class="member"> -->
               <!-- <div class="pic"><img src="assets/img/team-1.jpg" alt=""></div> -->
-              <div class="pic"><img src="assets/img/Saravanan-with-bg.jpg" alt=""></div>
+              <!-- <div class="pic"><img src="assets/img/Saravanan-with-bg.jpg" alt=""></div>
               <div class="details">
                 <h4>Walter White</h4>
                 <span>Chief Executive Officer</span>
@@ -467,12 +470,12 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
+          <!-- <div class="col-lg-3 col-md-6">
+            <div class="member"> -->
               <!-- <div class="pic"><img src="assets/img/team-2.jpg" alt=""></div> -->
-              <div class="pic"><img src="assets/img/Saravanan-with-bg.jpg" alt=""></div>
+              <!-- <div class="pic"><img src="assets/img/Saravanan-with-bg.jpg" alt=""></div>
               <div class="details">
                 <h4>Sarah Jhinson</h4>
                 <span>Product Manager</span>
@@ -484,12 +487,12 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
+          <!-- <div class="col-lg-3 col-md-6">
+            <div class="member"> -->
               <!-- <div class="pic"><img src="assets/img/team-3.jpg" alt=""></div> -->
-              <div class="pic"><img src="assets/img/Saravanan-with-bg.jpg" alt=""></div>
+              <!-- <div class="pic"><img src="assets/img/Saravanan-with-bg.jpg" alt=""></div>
               <div class="details">
                 <h4>William Anderson</h4>
                 <span>CTO</span>
@@ -501,12 +504,12 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
+          <!-- <div class="col-lg-3 col-md-6">
+            <div class="member"> -->
               <!-- <div class="pic"><img src="assets/img/team-4.jpg" alt=""></div> -->
-              <div class="pic"><img src="assets/img/Saravanan-with-bg.jpg" alt=""></div>
+              <!-- <div class="pic"><img src="assets/img/Saravanan-with-bg.jpg" alt=""></div>
               <div class="details">
                 <h4>Amanda Jepson</h4>
                 <span>Accountant</span>
@@ -519,10 +522,12 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-      </div>
-    </section><!-- End Team Section -->
+      <!-- </div>
+    </section> -->
+    
+    <!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact">
@@ -538,7 +543,9 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <address>#4C, SRI BALAJI NAGAR,
+                PERUNGALATHUR,
+                CHENNAI-600063</address>
             </div>
           </div>
 
@@ -562,7 +569,9 @@
       </div>
 
       <div class="container mb-4">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3886.833562658968!2d80.08047133823801!3d12.905415095871152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f5ef41a2d913%3A0x5fc4406c7317e0fe!2sSri%20Balaji%20Nagar%2C%20New%20Perungalathur%2C%20Perungalathur%2C%20Tamil%20Nadu%20600063!5e0!3m2!1sen!2sin!4v1627364393478!5m2!1sen!2sin" width="100%" height="380" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
 
       <div class="container">
