--- a/index.html
+++ b/index.html
@@ -438,11 +438,13 @@
       <div class="container" data-aos="zoom-out">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3 class="cta-title">Call To Action</h3>
-            <p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3 class="cta-title">OUR TEAM FOCUS</h3>
+            <p class="cta-text"> I'M ONPOINT to possess sensitivity, rigor and demands a high degree of positioning and persuasion skills. 
+              At I'M ONPOINT, Candidates will always have the advantage of dealing with the best suited consultant committed to provide the highest level of service. 
+              As our Group Tag Line says We Serve “Quality” , We ALL Strongly believe in “QUALITY” and NOT “QUANTITY”.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" href="#services">Services</a>
           </div>
         </div>
       </div>
