--- a/index.html
+++ b/index.html
@@ -154,6 +154,34 @@
       </div>
     </section><!-- End About Section -->
 
+     <!-- ======= Extra data Section ======= -->
+     <section id="unique">
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>HOW WE DIFFER</h2>
+          <p>At I'M ONPOINT. we believe that we are an extension of our market needs. 
+            We, further, like to highlight following for comfort level of our prospective candidates. 
+            Our database has been constructed with years of experience, dedicated resources including references, head hunting, media and job fairs. 
+            We continually emphasize on upgrading the database by exploring new resources.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="solution">
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>CUSTOMIZED SOLUTIONS</h2>
+          <p>We understand that requirement of each client is unique, so we provide fresh perspective & young talent of management professionals to provide high degree of solutions. 
+            We perform our best to provide customized solutions to our clients considering Clients’ corporate culture,
+            management style and philosophy.</p>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- End Extra data Section -->
+
+
     <!-- ======= Services Section ======= -->
     <section id="services">
       <div class="container" data-aos="fade-up">
@@ -226,6 +254,7 @@
       </div>
     </section> -->
     <!-- End Clients Section -->
+
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
