--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <h2>Developing leaders and <br><span>high-performance teams</span></h2>
       <div>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
-        <a href="#portfolio" class="btn-projects scrollto">Our Projects</a>
+        <a href="#portfolio" class="btn-projects scrollto">Our Portfolio</a>
       </div>
     </div>
 
