--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
         Licensing information: https://bootstrapmade.com/license/
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Reveal
       -->
-        Designed by <a href="https://github.com/ImATechnophile">ImATechnophile</a>
+        Designed by <a href="https://www.linkedin.com/in/saravana-prakash/">ImATechnophile</a>
       </div>
     </div>
   </footer><!-- End Footer -->
